frontend/style.css
li{
    list-style-type: none;
}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    
}

.horizontal-container{
    display: flex;
    height: 35vh;
    width: 100vw;

}


.rating-section{
    width: 15%;
}

.selection{
    width: 70%;
}

.recommended{
    width: 15%;
}

.header{
    width: 100%;
    height: 5vh;
    background-color: lightgreen;
    border-left: solid green 8px;
}

.nav-container{
    height: 100%;
    margin-left: 10vw;
    margin-right: 10vw;
}

.nav-list{
    height: 100%;
    width: 25%;

    display: flex;
    
}

.nav-list li{
    display: flex;
    align-items: center;
    flex-grow: 1;
    list-style: none;
    


}

.horizontal-container-large{
    display: flex;
    height: 55vh;
   
}




#section-one{
    height: 90%;
    width: 20dvw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    
    
    

    
}

.section-small-col{
    height: 90%;
    width: 20dvw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    

}

.card{
    background-color: lightgreen;
    margin: 1.5rem;
    padding: .5rem;
    border-radius: .5rem;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
}

.card-title{
    text-align: center;
    margin-bottom: 2rem;
    
 
}



.course-span{
    display: flex;
    height: 100%;
    width: 100%;

}

.course{
    background-color: green;
    border: .5rem solid yellow;
    width: 100%;
    height: 100%;
    border-radius: 1rem;
    display: flex;
    flex-direction: column;
}
.course > *{
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
}

.course-heading{
    flex-shrink: 1;

}
.course-rating{
}
.course-details{
    flex-shrink: 2;
}

.course-button{
    width: 100%;
}

#test{
    background-color: white;
}

.section-header{
    width: 100%;
    background-color: red;
}


.footer{
    width: 100%;
    height: 5vh;
    background-color: rgb(255, 255, 159);
    border-left: solid yellow 8px;

}

.footer, .header{
    outline: 2px solid black;
}

.line{
    background-color: whitesmoke;

    border-left: 2px solid black;
    border-right: 2px solid black;
    margin-left: .25rem;
    height: 2rem;
    width: .5rem;
   
    z-index: -1;
}

.ball{
    
    border: solid 2px black;
    height: 1rem;
    width: 1rem;
    border-radius: 50%;
}

.ball:hover{
    cursor: pointer;
    background-color: #03AC13;
}


.flex-pair{
    width: 100%;
    display: flex;
}

.child-flex{
    padding: 0rem 1rem 0rem 1rem;

}

.child-flex-grow{
    flex-grow: 1;
}

